--- a/01-color-flipper/setup/styles.css
+++ b/01-color-flipper/setup/styles.css
@@ -1,15 +1,11 @@
-/*
-=============== 
+/*============= 
 Fonts
-===============
-*/
+=============*/
 @import url("https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,700&display=swap");
 
-/*
-=============== 
+/*============= 
 Variables
-===============
-*/
+=============*/
 
 :root {
   /* dark shades of primary color*/
@@ -53,11 +49,9 @@ Variables
   --max-width: 1170px;
   --fixed-width: 620px;
 }
-/*
-=============== 
+/*============= 
 Global Styles
-===============
-*/
+=============*/
 
 *,
 ::after,
@@ -151,11 +145,9 @@ main {
   place-items: center;
 }
 
-/*
-=============== 
+/*============= 
 Nav
-===============
-*/
+=============*/
 nav {
   background: var(--clr-white);
   height: 3rem;
@@ -189,11 +181,9 @@ nav a {
 nav a:hover {
   color: var(--clr-primary-5);
 }
-/*
-=============== 
+/*============= 
 Container
-===============
-*/
+=============*/
 main {
   min-height: calc(100vh - 3rem);
   display: grid;
