--- a/09-video/styles.css
+++ b/09-video/styles.css
@@ -194,7 +194,7 @@ Video
   z-index: 999;
   transition: var(--transition);
 }
-.hide-preloader {
+ .hide-preloader {
   z-index: -999;
   visibility: hidden;
 }
@@ -254,14 +254,14 @@ h1 {
 .slide .switch {
   left: 50%;
 }
-/* header after */
-/* header::after {
+/* header after - DARK OVERLAY */
+ header::after {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(0, 0, 0, 0.7);/* BLACK OVERLAY */
   z-index: -1;
-} */
+}
